Feb13-Feb17/force-app/main/default/objects/Class__c/fields/Assigned_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Teacher</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>