Feb13-Feb17/force-app/main/default/objects/Class__c/fields/Essays__c.field-meta.xml
<CustomField>
    <fullName>Essays__c</fullName>
    <label>Essays</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>