Feb13-Feb17/force-app/main/default/objects/Class__c/fields/Exams__c.field-meta.xml
<CustomField>
    <fullName>Exams__c</fullName>
    <label>Exams</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>