Feb13-Feb17/force-app/main/default/objects/Class__c/recordTypes/Science.recordType-meta.xml
<RecordType>
    <fullName>Science</fullName>
    <active>false</active>
    <label>Science</label>
</RecordType>