Feb13-Feb17/force-app/main/default/objects/Class__c/listViews/History.listView-meta.xml
<ListView>
    <fullName>History</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>History</label>
</ListView>