Feb13-Feb17/force-app/main/default/objects/Class__c/listViews/Math.listView-meta.xml
<ListView>
    <fullName>Math</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Math</label>
</ListView>